--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <div class="hack-slides">
 
-        <div class="slide">restarting server...</span></div>
+        <div class="slide">restarting server...<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">hbd fifi<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semoga diberi karunia ilmu, rezeki, iman, kesehatan, dan segala hal lain yang bermanfaat<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">makin sukses akhirat maupun dunianya<span class="toggle"><strong>_</strong></span></div>
