--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
    <div class="hack-slider">
 
       <div class="hack-slides">
+        
+        <input type="button" value="click to toggle fullscreen" onclick="toggleFullScreen(document.body)">
 
         <div class="slide">restarting server<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">hbd fifi<span class="toggle"><strong>_</strong></span></div>
