--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div class="slide">restarting server<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">hbd fifi<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semoga diberi karunia ilmu, rezeki, iman, kesehatan, dan segala hal lain yang bermanfaat<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">makin sukses akhirat maupun dunianya<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">semangat cbt 3 in 1 nya<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">makin sukses dunia maupun akhiratnya<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">semangat ya buat cbt 3 in 1<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semoga dapet hasil yang terbaik<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">-anonim<span class="toggle"><strong>_</strong></span></div>
 
