--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="slide">semangat buat cbt 3 in 1 ya<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semoga dapet hasil yang terbaik<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">sukses terus kedepannya<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">-anonim, 21 juni 2020<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">-anonim, 21-6-20 18:38 WIB<span class="toggle"><strong>_</strong></span></div>
 
       </div>
 
