--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
       <div class="hack-slides">
 
         <div class="slide">restarting server<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">dibuat di bawah langit jawa, 2020-07-21 jam 18:37<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">hbd fifi<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semoga diberi karunia ilmu, rezeki, iman, kesehatan, dan segala hal lain yang bermanfaat<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">makin sukses dunia maupun akhiratnya<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semangat buat cbt 3 in 1 ya<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semoga dapet hasil yang terbaik<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">sukses terus kedepannya<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">-anonim, 21-6-20 18:38 WIB<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">-anonim<span class="toggle"><strong>_</strong></span></div>
 
       </div>
 
