--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="slide">hbd fifi<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semoga diberi karunia ilmu, rezeki, iman, kesehatan, dan hal bermanfaat lainnya<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">makin sukses dunia maupun akhiratnya<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">semangat buat cbt 3 in 1 ya<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">semangat cbt 3 in 1 ya<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semoga dapet hasil yang terbaik<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">-anonim<span class="toggle"><strong>_</strong></span></div>
 
