--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="slide">semoga dapet hasil yang terbaik<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">
           <span class="secret">-anonim</span>
-          <span id="secretMessage" class="secret hide">, yang pernah memendam rasa, tanpa berharap lebih</span>
+          <span class="secret hide">"yang pernah memendam rasa, tanpa berharap lebih"</span>
           <span id="underScore" class="toggle"><strong>_</strong></span>
         </div>
 
