--- a/index.html
+++ b/index.html
@@ -14,17 +14,13 @@
 
       <div class="hack-slides">
 
-        <div class="slide">restarting server<span id="underScore"  class="toggle"><strong>_</strong></span></div>
-        <div class="slide">hbd fifi<span id="underScore"  class="toggle"><strong>_</strong></span></div>
-        <div class="slide">semoga diberi karunia ilmu, rezeki, iman, kesehatan, dan hal bermanfaat lainnya<span id="underScore"  class="toggle"><strong>_</strong></span></div>
-        <div class="slide">makin sukses dunia maupun akhiratnya<span id="underScore"  class="toggle"><strong>_</strong></span></div>
-        <div class="slide">semangat cbt 3 in 1 ya<span id="underScore"  class="toggle"><strong>_</strong></span></div>
-        <div class="slide">semoga dapet hasil yang terbaik<span id="underScore"  class="toggle"><strong>_</strong></span></div>
-        <div class="slide">
-          <span class="secret">-anonim</span>
-          <span id="underScore" class="secret toggle"><strong>_</strong></span>
-          <span class="secret hide">yang pernah memendam rasa, tanpa berharap lebih</span>
-          <span id="underScore" class="toggle hide"><strong>_</strong></span>
+        <div class="slide">restarting server<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">hbd fifi<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">semoga diberi karunia ilmu, rezeki, iman, kesehatan, dan hal bermanfaat lainnya<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">makin sukses dunia maupun akhiratnya<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">semangat cbt 3 in 1 ya<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">semoga dapet hasil yang terbaik<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide"><span class="secret">-anonim</span><span class="toggle"><strong>_</strong></span>
         </div>
 
       </div>
