--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <div class="slide">makin sukses dunia maupun akhiratnya<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semangat cbt 3 in 1 ya<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semoga dapet hasil yang terbaik<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">-anonim<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">-anonim,<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">${hiddenMessage}<span class="toggle"><strong>_</strong></span></div>
 
       </div>
 
