--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
         <div class="slide">restarting server<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">kan udah ngga ultah, ngapain diliat? wkwkw<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">-anonim, yang udah mundur dan ga akan coba maju lagi<span class="toggle"><strong>_</strong></span></div>
+        
       </div>
 
       <div class="shapes"></div>
