--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
       <div class="hack-slides">
 
         <div class="slide">restarting server<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">kan udah ngga ultah, ngapain diliat? wkwkw<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">-anonim, yang udah mundur dan ga akan coba maju lagi<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">hbd fifi<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">semoga diberi karunia ilmu, rezeki, iman, kesehatan, dan hal bermanfaat lainnya<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">makin sukses dunia maupun akhiratnya<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">semangat cbt 3 in 1 ya<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">semoga dapet hasil yang terbaik<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">-anonim,<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">orang yang kayaknya kamu ilfil-in banget,<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">yang udah mencoba mundur,<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">dan ngga akan nyoba maju lagi<span class="toggle"><strong>_</strong></span></div>
         
       </div>
 
