--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
         <div class="slide">makin sukses dunia maupun akhiratnya<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semangat cbt 3 in 1 ya<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semoga dapet hasil yang terbaik<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">-anonim,<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">orang yang kayaknya kamu ilfil-in banget,<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">yang udah mencoba mundur,<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">dan ngga akan nyoba maju lagi<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">"makasih ya... 2 tahunnya",<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">"aku bakal mundur kok"<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">-anonim<span class="toggle"><strong>_</strong></span></div>
         
       </div>
 
