--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         <div class="slide">makin sukses dunia maupun akhiratnya<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semangat cbt 3 in 1 ya<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semoga dapet hasil yang terbaik<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">"makasih ya... 2 tahunnya",<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">"aku bakal mundur kok"<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">btw,<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">makasih ya... 2 tahunnya,<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">aku bakal mundur,<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">dan gaakan pernah hubungi lagi kok<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">-anonim<span class="toggle"><strong>_</strong></span></div>
         
       </div>
