--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <div class="slide">makasih ya... 2 tahunnya,<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">aku bakal mundur kok<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">maaf kalo selama ini aku bikin risih<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">-anonim<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">-anonim,<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">pasti kamu tau siapa<span class="toggle"><strong>_</strong></span></div>
         
       </div>
 
