--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="slide">semangat cbt 3 in 1 ya<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semoga dapet hasil yang terbaik<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">btw,<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">makasih ya... 2 tahunnya,<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">makasih ya 2 tahunnya<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">aku bakal mundur kok<span class="toggle"><strong>_</strong></span></div>
-        <div class="slide">maaf kalo selama ini aku bikin risih<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">maaf kalo selama ini bikin risih<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">-anonim<span class="toggle"><strong>_</strong></span></div>
         
       </div>
