--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
    <div class="hack-slider">
 
       <div class="hack-slides">
-
-        <div class="slide">-alfi<span class="toggle"><strong>_</strong></span></div>
+        
+        <div class="slide">restarting server<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">hbd fifi<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semoga diberi karunia ilmu, rezeki, iman, kesehatan, dan hal bermanfaat lainnya<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">makin sukses dunia maupun akhiratnya<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semangat cbt 3 in 1 ya<span class="toggle"><strong>_</strong></span></div>
         <div class="slide">semoga dapet hasil yang terbaik<span class="toggle"><strong>_</strong></span></div>
+        <div class="slide">-20775<span class="toggle"><strong>_</strong></span></div>
         
       </div>
 
